--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "dev": "nodemon *.*",
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "axios": "^1.6.5",
     "cookie-parser": "~1.4.4",
